# ClusterChatServer

./: CMakeLists.txt  README.md  autobuild.sh
config/: mysqlconnection.cnf
include/: chatserver.hpp  chatservices.hpp  public.hpp
include/MysqlConnectionPool/: connection.hpp
include/model/: friendModel.hpp  group.hpp  groupModel.hpp  groupuser.hpp  offlinemessageModel.hpp  user.hpp  userModel.hpp
include/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservices.cpp  main.cpp
src/server/MysqlConnectionPool/: connection.cpp  connectionPool.cpp
src/server/model/: friendModel.cpp  groupModel.cpp  offlinemessageModel.cpp  userModel.cpp
src/server/redis/: redis.cpp
test/: js.txt
